# playground-poc

./: .env  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  session-impl-project-003.md  session-opencode-init-command-002.md  session-refactor-004.md
data/: sample.csv
docs/opencode-sessions/: session-impl-rate-limit-005.md  session-refine-readme-0001.md
playground/: __init__.py  app.py  config.py  constants.py  prompts.py  schemas.py  tasks.py  utils.py
playground/clients/: __init__.py  s3_client.py
playground/routers/: __init__.py  evaluation.py  upload.py
playground/service/: evaluation.py
tests/: conftest.py  test_evaluation.py  test_upload.py
