[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.63",
    "fastapi>=0.135.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.0.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.5",
]

[mypy]
ignore_missing_imports = true
