[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.63",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.2.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.13.1",
    "tenacity>=9.0.0",
    "uvicorn>=0.41.0",
    "pytest-env>=1.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
# These variables will be set for every test run
env = [
    "PLAYGROUND_APP_ENV=testing",
    "PLAYGROUND_LOG_LEVEL=INFO",
    "PLAYGROUND_TOKEN_BUCKET_CAPACITY=100",
    "PLAYGROUND_TOKEN_BUCKET_REFILL_RATE=10",
    "PLAYGROUND_S3_ENDPOINT_URL=http://localhost:4566",
    "PLAYGROUND_S3_ACCESS_KEY=test_key",
    "PLAYGROUND_S3_SECRET_KEY=test_secret",
    "PLAYGROUND_S3_REGION_NAME=us-west-2",
    "PLAYGROUND_S3_BUCKET_NAME=test-bucket",
    "PLAYGROUND_SIGNED_URL_EXPIRY=60",
    "PLAYGROUND_OPENAI_API_KEY=sk-test-123",
    "PLAYGROUND_ANTHROPIC_API_KEY=ant-test-456",
]
